data/all_generated_tests/raw_wast_tests/block_ImproperFunctionCallorReturnHandling_2549.wast
;; 10. **Function Call after Branch Table in Block:**    - **Test Description:** Implement a block with a `br_table` instruction followed by a direct function call to test correct execution path resolution.    - **Constraint Checked:** Proper branch table resolution and subsequent function call handling.    - **Relation to Improper Function Handling:** Verify correct path resolution in `br_table` followed by function calls within block contexts.

(assert_invalid
  (module
    (func $test_func (result i32)
      (i32.const 0)
      (block $label (result i32)
        (br_table $label $label (i32.const 1) (i32.const 1))
        (call $some_func)
      )
    )
    (func $some_func (result i32) (i32.const 42))
  )
  "invalid branch target"
)